support multiple SHIELD_FORWARD_URLs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-SHIELD_FORWARD_URL = "https://testnet.muon.net/v1/"
+#separate by comma
+SHIELD_FORWARD_URLS = "https://testnet.muon.net/v1/"
+
 PORT=3000
 
 SIGN_WALLET_ADDRESS = < wallet address >
