fee delegation added

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ PORT=3000
 SIGN_WALLET_ADDRESS = < wallet address >
 SIGN_WALLET_PRIVATE_KEY = < private key >
 
+# To enable fee delegation by the shield node, 
+# set the private key of a wallet with sufficient fee 
+# balance and the appId here
+FEE_PRIVATE_KEY = < fees wallet address >
+FEE_APP_ID = < appId >
+
 WEB3_PROVIDER_GANACHE = "http://localhost:8545"
 WEB3_PROVIDER_ETH = "https://rpc.ankr.com/eth"
 WEB3_PROVIDER_ROPSTEN = "https://rpc.ankr.com/eth_ropsten"
