--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@metamask/eth-sig-util": "^7.0.1",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "eth-sig-util": "^3.0.1",
