--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@metamask/eth-sig-util": "^7.0.1",
     "axios": "^1.2.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eth-sig-util": "^3.0.1",
     "ethereum-multicall": "^2.15.0",
